--- a/css/styles.scss
+++ b/css/styles.scss
@@ -19,7 +19,7 @@ html {
 
 body {
   font: 16px/20px "Sora", sans-serif;
-  color: #231f20;
+  color: #171717;
   margin: 0;
   padding: 0;
   background: #fff;
@@ -146,5 +146,5 @@ button {
 }
 .italic{
   font-family: "Dancing Script", sans-serif;
-  
+
 }
