--- a/layouts/_common.scss
+++ b/layouts/_common.scss
@@ -7,7 +7,7 @@
   display: none;
 }
 // Home Start
-.home{
+.home {
   .hero {
     position: relative;
     overflow: hidden;
@@ -33,11 +33,11 @@
       background-color: rgba(0, 0, 0, 0.5);
       // z-index: 0;
     }
-  
+
     .container {
       position: relative;
       // z-index: 1;
-  
+
       @media (min-width: 768px) {
         margin: 0;
         padding: 0 30px;
@@ -59,7 +59,7 @@
       }
     }
   }
-  
+
   .about {
     margin-bottom: 30px;
     @media (min-width: 929px) {
@@ -207,7 +207,7 @@
         @media (min-width: 768px) {
           width: 40%;
         }
-  
+
         img {
           margin: 0 auto;
           border-radius: 50%;
@@ -308,7 +308,7 @@
         color: $white;
         min-height: 250px;
         padding: 30px 20px;
-  
+
         animation: upDown 4s infinite;
         position: relative;
         @media (min-width: 992px) {
@@ -340,7 +340,7 @@
     @media (min-width: 929px) {
       margin-bottom: 50px;
     }
-    .h2{
+    .h2 {
       display: block;
       text-align: center;
       color: $primary;
@@ -353,15 +353,15 @@
     }
     .slide {
       margin: 0 20px;
-  
+
       img {
         margin: 0 auto;
         width: 100%;
         max-width: 150px;
         height: 150px;
-        @media (min-width:992px){
+        @media (min-width: 992px) {
           max-width: 200px;
-        height: 200px;
+          height: 200px;
         }
       }
     }
@@ -369,7 +369,7 @@
 }
 // Home End
 // Admission start
-.admissions{
+.admissions {
   .hero {
     position: relative;
     overflow: hidden;
@@ -395,11 +395,11 @@
       background-color: rgba(0, 0, 0, 0.2);
       // z-index: 0;
     }
-  
+
     .container {
       position: relative;
       // z-index: 1;
-  
+
       @media (min-width: 768px) {
         margin: 0;
         padding: 0 30px;
@@ -411,10 +411,150 @@
       }
     }
   }
+  .procedure {
+    margin-bottom: 30px;
+    @media (min-width: 929px) {
+      margin-bottom: 50px;
+    }
+    h2 {
+      font-weight: 500;
+      color: $primary;
+      margin-bottom: 30px;
+    }
+    .container{
+      .procedure {
+        font-size: 15px;
+        line-height: 25px;
+        @media (min-width: 992px) {
+          font-size: 17px;
+          line-height: 28px;
+        }
+        .title {
+          font-size: 18px;
+          line-height: 24px;
+          display: block;
+          margin-bottom: 20px;
+          @media (min-width: 992px) {
+            font-size: 22px;
+            line-height: 26px;
+            margin-bottom: 30px;
+          }
+        }
+        p {
+          margin-bottom: 18px;
+          @media (min-width: 992px) {
+            margin-bottom: 30px;
+          }
+        }
+        span {
+          display: block;
+          font-size: 13px;
+          line-height: 17px;
+          margin-bottom: 30px;
+        }
+      }
+      .enroll{
+        img{
+          margin: 0 auto 20px;
+        }
+      }
+      .registration{
+        margin-bottom: 20px;
+        .cards{
+          padding: 20px 0;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-wrap: wrap;
+          gap: 20px;
+          .card{
+            width: 100%;
+            max-width: 380px;
+            min-height: 230px;
+            background: $primary;
+            color: $white;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            font-size: 13px;
+            line-height: 20px;
+            .title{
+              display: block;
+              font-size: 18px;
+              line-height: 22px;
+              text-transform: uppercase;
+              @media (min-width:992px){
+                font-size: 22px;
+                line-height: 26px;
+              }
+            }
+            p{
+              margin-bottom: 20px;
+            }
+          }
+        }
+      }
+      .test{
+        .faq-item {
+          margin-bottom: 15px;
+          border-bottom: 1px solid #ccc;
+      
+          .faq-question {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            cursor: pointer;
+            padding: 15px;
+            transition: background-color 0.3s ease;
+      
+            h3 {
+              margin: 0;
+              color: $primary;
+              font-size: 18px;
+            }
+      
+            .faq-toggle {
+              font-size: 24px;
+              font-weight: bold;
+              transition: transform 0.3s ease;
+            }
+          }
+      
+          .faq-answer {
+            display: none;
+            padding: 15px;
+            background-color: #fff;
+ 
+      
+            p {
+              margin: 0;
+              color: $primary;
+              font-size: 16px;
+            }
+          }
+        }
+      
+        .faq-item.active .faq-answer {
+          display: block;
+        }
+      
+        .faq-item.active .faq-question {
+          // background-color: $secondary-color;
+      
+          .faq-toggle {
+            content: "-";
+            transform: rotate(180deg);  // Optional: adds a nice effect for switching the icon
+          }
+        }
+    
+      }
+    }
+  }
 }
 // Admission End
 //Career Start
-.career{
+.career {
   .hero {
     position: relative;
     overflow: hidden;
@@ -440,11 +580,11 @@
       background-color: rgba(0, 0, 0, 0.2);
       // z-index: 0;
     }
-  
+
     .container {
       position: relative;
       // z-index: 1;
-  
+
       @media (min-width: 768px) {
         margin: 0;
         padding: 0 30px;
@@ -456,20 +596,20 @@
       }
     }
   }
-  .careers{
+  .careers {
     margin-bottom: 30px;
-    @media (min-width:992px){
+    @media (min-width: 992px) {
       margin-bottom: 50px;
     }
-    .container{
+    .container {
       font-size: 17px;
       line-height: 30px;
-      h2{
+      h2 {
         color: $primary;
         font-weight: 500;
         margin-bottom: 40px;
       }
-      p{
+      p {
         margin-bottom: 20px;
       }
     }
@@ -483,4 +623,3 @@
     top: 20px;
   }
 }
-
