--- a/css/styles.scss
+++ b/css/styles.scss
@@ -76,6 +76,24 @@ h2 {
     line-height: 34px;
   }
 }
+h3,
+.h3{
+  font-size: 18px;
+  line-height: 22px;
+  @media (min-width:992px){
+    font-size: 22px;
+  line-height: 26px;
+  }
+}
+h4,
+.h4{
+  font-size: 18px;
+  line-height: 22px;
+  @media (min-width:992px){
+    font-size: 22px;
+    line-height: 26px;
+  }
+}
 img {
   display: block;
   max-width: 100%;
