--- a/layouts/_common.scss
+++ b/layouts/_common.scss
@@ -20,7 +20,7 @@
     justify-content: start;
     color: $white;
     margin-bottom: 30px;
-    @media (min-width: 929px) {
+    @media (min-width: 992px) {
       margin-bottom: 50px;
     }
     &::before {
@@ -62,7 +62,7 @@
 
   .about {
     margin-bottom: 30px;
-    @media (min-width: 929px) {
+    @media (min-width: 992px) {
       margin-bottom: 50px;
     }
     .container {
@@ -129,7 +129,7 @@
   }
   .cards {
     margin-bottom: 30px;
-    @media (min-width: 929px) {
+    @media (min-width: 992px) {
       margin-bottom: 50px;
     }
     .cardWrap {
@@ -179,7 +179,7 @@
   }
   .message {
     margin-bottom: 30px;
-    @media (min-width: 929px) {
+    @media (min-width: 992px) {
       margin-bottom: 50px;
     }
     .container {
@@ -217,7 +217,7 @@
   }
   .leadership {
     margin-bottom: 30px;
-    @media (min-width: 929px) {
+    @media (min-width: 992px) {
       margin-bottom: 50px;
     }
     .container {
@@ -274,7 +274,7 @@
   }
   .school {
     margin-bottom: 30px;
-    @media (min-width: 929px) {
+    @media (min-width: 992px) {
       margin-bottom: 50px;
     }
     background-image: url(/images/home/school.jpg);
@@ -337,7 +337,7 @@
   }
   .slider {
     margin-bottom: 30px;
-    @media (min-width: 929px) {
+    @media (min-width: 992px) {
       margin-bottom: 50px;
     }
     .h2 {
@@ -368,6 +368,217 @@
   }
 }
 // Home End
+//about start
+#about {
+
+  .hero {
+    position: relative;
+    overflow: hidden;
+    background-image: url("/images/home/about-us.jpg");
+    background-position: center;
+    background-size: cover;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    color: $white;
+    margin-bottom: 30px;
+    @media (min-width: 992px) {
+      margin-bottom: 50px;
+    }
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: rgba(0, 0, 0, 0.3);
+      // z-index: 0;
+    }
+
+    .container {
+      position: relative;
+      // z-index: 1;
+
+      @media (min-width: 768px) {
+        margin: 0;
+        padding: 0 30px;
+      }
+      .heading {
+        width: 100%;
+        max-width: 500px;
+        margin-top: 70px;
+      }
+    }
+  }
+  .overview {
+    margin-bottom: 30px;
+    @media (min-width: 992px) {
+      margin-bottom: 50px;
+    }
+    .heading {
+      font-size: 17px;
+      line-height: 25px;
+      max-width: 900px;
+      margin-bottom: 20px;
+      h2 {
+        font-weight: 500;
+        color: $primary;
+        margin-bottom: 30px;
+      }
+      h3 {
+        margin-bottom: 30px;
+      }
+    }
+  }
+  .vision {
+    display: flex;
+    align-items: start;
+    justify-content: start;
+    gap: 15px;
+    flex-direction: column;
+    margin-bottom: 30px;
+
+    @media (min-width: 768px) {
+      gap: 30px;
+      flex-direction: row;
+    }
+    @media (min-width: 992px) {
+      margin-bottom: 50px;
+    }
+    .icon img {
+      width: 40px;
+      height: 40px;
+    }
+    .visionWrap {
+      h4 {
+        color: $primary;
+        font-weight: 500;
+        margin-bottom: 15px;
+        @media (min-width: 576px) {
+          margin-bottom: 30px;
+        }
+      }
+      .wrap {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 20px;
+        @media (min-width: 576px) {
+          grid-template-columns: repeat(2, 1fr);
+        }
+        strong {
+          font-size: 17px;
+          line-height: 21px;
+          font-weight: 600;
+          display: block;
+          margin-bottom: 8px;
+          @media (min-width: 576px) {
+            margin-bottom: 20px;
+          }
+        }
+      }
+    }
+  }
+  .security {
+    h2 {
+      font-weight: 500;
+      color: $primary;
+    }
+    .securityWrap {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 30px;
+      flex-direction: column;
+      @media (min-width: 768px) {
+        flex-direction: row;
+      }
+      .textHolder {
+        font-size: 16px;
+        line-height: 24px;
+        @media (min-width: 768px) {
+          width: 50%;
+        }
+        span {
+          margin-bottom: 20px;
+          display: block;
+          font-size: 17px;
+          line-height: 21px;
+        }
+        ul {
+          li {
+            margin-bottom: 20px;
+            display: flex;
+            gap: 10px;
+            align-items: center;
+            .box {
+              width: 10px;
+              height: 10px;
+              background: $primary;
+            }
+          }
+        }
+      }
+    }
+  }
+  .journey{
+    padding:50px 20px;
+    background: linear-gradient(to bottom, #003366 0%, #006699 100%);
+    margin-bottom: 30px;
+    @media (min-width: 992px) {
+      margin-bottom: 50px;
+    }
+    h2{
+      color: $white;
+      margin-bottom: 30px;
+      text-align: center;
+    }
+    .slider{
+      display: flex;
+      .slick-track{
+        width: 100%;
+        overflow: hidden;
+      }
+      .slide{
+        color: $white;
+        width: 300px;
+        margin-bottom: 30px;
+        .line{
+          width: 100%;
+          height: 2px;
+          background-color: $white;
+          position: relative;
+          margin: 20px 0;
+          &::before{
+            content:"";
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            border-radius: 50%;
+            background: yellow;
+            top: -7px;
+            bottom: 0;
+            left: 0;
+          }
+        }
+        .title{
+          font-size: 16px;
+          line-height: 20px;
+          display: block;
+          font-weight: 600;
+        }
+        .para{
+          font-size: 14px;
+          line-height: 18px;
+          display: block;
+          font-weight: 400;
+        }
+      }
+    }
+  }
+}
+//about end
 // Admission start
 .admissions {
   .hero {
@@ -382,7 +593,7 @@
     justify-content: start;
     color: $white;
     margin-bottom: 30px;
-    @media (min-width: 929px) {
+    @media (min-width: 992px) {
       margin-bottom: 50px;
     }
     &::before {
@@ -392,7 +603,7 @@
       left: 0;
       right: 0;
       bottom: 0;
-      background-color: rgba(0, 0, 0, 0.2);
+      background-color: rgba(0, 0, 0, 0.3);
       // z-index: 0;
     }
 
@@ -413,7 +624,7 @@
   }
   .procedure {
     margin-bottom: 30px;
-    @media (min-width: 929px) {
+    @media (min-width: 992px) {
       margin-bottom: 50px;
     }
     h2 {
@@ -421,7 +632,7 @@
       color: $primary;
       margin-bottom: 30px;
     }
-    .container{
+    .container {
       .procedure {
         font-size: 15px;
         line-height: 25px;
@@ -453,21 +664,21 @@
           margin-bottom: 30px;
         }
       }
-      .enroll{
-        img{
+      .enroll {
+        img {
           margin: 0 auto 20px;
         }
       }
-      .registration{
+      .registration {
         margin-bottom: 20px;
-        .cards{
+        .cards {
           padding: 20px 0;
           display: flex;
           justify-content: center;
           align-items: center;
           flex-wrap: wrap;
           gap: 20px;
-          .card{
+          .card {
             width: 100%;
             max-width: 380px;
             min-height: 230px;
@@ -479,27 +690,27 @@
             justify-content: space-between;
             font-size: 13px;
             line-height: 20px;
-            .title{
+            .title {
               display: block;
               font-size: 18px;
               line-height: 22px;
               text-transform: uppercase;
-              @media (min-width:992px){
+              @media (min-width: 992px) {
                 font-size: 22px;
                 line-height: 26px;
               }
             }
-            p{
+            p {
               margin-bottom: 20px;
             }
           }
         }
       }
-      .test{
+      .test {
         .faq-item {
           margin-bottom: 15px;
           border-bottom: 1px solid #ccc;
-      
+
           .faq-question {
             display: flex;
             justify-content: space-between;
@@ -507,26 +718,25 @@
             cursor: pointer;
             padding: 15px;
             transition: background-color 0.3s ease;
-      
+
             h3 {
               margin: 0;
               color: $primary;
               font-size: 18px;
             }
-      
+
             .faq-toggle {
               font-size: 24px;
               font-weight: bold;
               transition: transform 0.3s ease;
             }
           }
-      
+
           .faq-answer {
             display: none;
             padding: 15px;
             background-color: #fff;
- 
-      
+
             p {
               margin: 0;
               color: $primary;
@@ -534,20 +744,17 @@
             }
           }
         }
-      
+
         .faq-item.active .faq-answer {
           display: block;
         }
-      
+
         .faq-item.active .faq-question {
-          // background-color: $secondary-color;
-      
           .faq-toggle {
             content: "-";
-            transform: rotate(180deg);  // Optional: adds a nice effect for switching the icon
+            transform: rotate(180deg);
           }
         }
-    
       }
     }
   }
@@ -567,7 +774,7 @@
     justify-content: start;
     color: $white;
     margin-bottom: 30px;
-    @media (min-width: 929px) {
+    @media (min-width: 992px) {
       margin-bottom: 50px;
     }
     &::before {
@@ -577,7 +784,7 @@
       left: 0;
       right: 0;
       bottom: 0;
-      background-color: rgba(0, 0, 0, 0.2);
+      background-color: rgba(0, 0, 0, 0.3);
       // z-index: 0;
     }
 
@@ -615,6 +822,7 @@
     }
   }
 }
+//Career End
 @keyframes upDown {
   from {
     top: -20px;
