--- a/layouts/_common.scss
+++ b/layouts/_common.scss
@@ -370,7 +370,6 @@
 // Home End
 //about start
 #about {
-
   .hero {
     position: relative;
     overflow: hidden;
@@ -522,36 +521,36 @@
       }
     }
   }
-  .journey{
-    padding:50px 20px;
+  .journey {
+    padding: 50px 20px;
     background: linear-gradient(to bottom, #003366 0%, #006699 100%);
     margin-bottom: 30px;
     @media (min-width: 992px) {
       margin-bottom: 50px;
     }
-    h2{
+    h2 {
       color: $white;
       margin-bottom: 30px;
       text-align: center;
     }
-    .slider{
+    .slider {
       display: flex;
-      .slick-track{
+      .slick-track {
         width: 100%;
         overflow: hidden;
       }
-      .slide{
+      .slide {
         color: $white;
         width: 300px;
         margin-bottom: 30px;
-        .line{
+        .line {
           width: 100%;
           height: 2px;
           background-color: $white;
           position: relative;
           margin: 20px 0;
-          &::before{
-            content:"";
+          &::before {
+            content: "";
             position: absolute;
             width: 20px;
             height: 20px;
@@ -562,13 +561,13 @@
             left: 0;
           }
         }
-        .title{
+        .title {
           font-size: 16px;
           line-height: 20px;
           display: block;
           font-weight: 600;
         }
-        .para{
+        .para {
           font-size: 14px;
           line-height: 18px;
           display: block;
@@ -750,6 +749,7 @@
         }
 
         .faq-item.active .faq-question {
+          font-weight: 600;
           .faq-toggle {
             content: "-";
             transform: rotate(180deg);
@@ -823,6 +823,172 @@
   }
 }
 //Career End
+//contact us start
+.contact {
+  .hero {
+    position: relative;
+    overflow: hidden;
+    background-image: url("/images/contact/hero.jpg");
+    background-position: center;
+    background-size: cover;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    color: $white;
+    margin-bottom: 30px;
+    @media (min-width: 992px) {
+      margin-bottom: 50px;
+    }
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: rgba(0, 0, 0, 0.5);
+      // z-index: 0;
+    }
+
+    .container {
+      position: relative;
+      // z-index: 1;
+
+      @media (min-width: 768px) {
+        margin: 0;
+        padding: 0 30px;
+      }
+      .heading {
+        width: 100%;
+        max-width: 500px;
+        margin-top: 70px;
+      }
+      small {
+        font-size: 18px;
+        line-height: 22px;
+        display: block;
+        @media (min-width: 992px) {
+          font-size: 24px;
+          line-height: 28px;
+          margin-bottom: 20px;
+        }
+      }
+    }
+  }
+  .connect{
+    margin-bottom: 30px;
+    @media (min-width: 992px) {
+      margin-bottom: 50px;
+    }
+    h2{
+      color: $primary;
+      text-align: center;
+      margin-bottom:25px;
+      @media (min-width:992px){
+        margin-bottom: 50px;
+      }
+    } 
+    .connectWrap{
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+      gap: 20px;
+      justify-content: center;
+      @media (min-width:768px){
+        grid-template-columns:repeat(2, 1fr);
+      }
+      .office{
+        max-width: 436px;
+        width: 100%;
+        text-align: center;
+        margin: 0 auto 20px;
+        ul{
+          li{
+            margin-bottom: 10px;
+            font-size: 16px;
+            line-height: 20px;
+          }
+        }
+      }
+    }
+    .formWrap{
+      display: flex;
+      gap: 20px;
+      justify-content: center;
+      align-items: start;
+      .form{
+        h2{
+          color: $primary;
+          font-weight: 500;
+        }
+      }
+    }
+  }
+  .faqs {
+    margin-bottom: 30px;
+    @media (min-width: 992px) {
+      margin-bottom: 50px;
+    }
+    h2 {
+      color: $primary;
+      margin-bottom: 30px;
+    }
+    .faq-item {
+      margin-bottom: 15px;
+      border-bottom: 1px solid #ccc;
+
+      .faq-question {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        cursor: pointer;
+        padding: 15px;
+        transition: background-color 0.3s ease;
+
+        h3 {
+          margin: 0;
+          color: $black;
+          font-size: 18px;
+          font-weight: 500;
+        }
+
+        .faq-toggle {
+          font-size: 24px;
+          font-weight: bold;
+          transition: transform 0.3s ease;
+        }
+      }
+
+      .faq-answer {
+        display: none;
+        padding: 15px;
+        background-color: #fff;
+
+        p {
+          margin: 0;
+          color: $primary;
+          font-size: 16px;
+        }
+      }
+    }
+
+    .faq-item.active .faq-answer {
+      display: block;
+    }
+
+    .faq-item.active .faq-question {
+      h3 {
+        color: $primary;
+        font-weight: 600;
+      }
+      .faq-toggle {
+        content: "-";
+        transform: rotate(180deg);
+      }
+    }
+  }
+}
+//contact us end
 @keyframes upDown {
   from {
     top: -20px;
