--- a/layouts/_common.scss
+++ b/layouts/_common.scss
@@ -876,34 +876,34 @@
       }
     }
   }
-  .connect{
+  .connect {
     margin-bottom: 30px;
     @media (min-width: 992px) {
       margin-bottom: 50px;
     }
-    h2{
+    h2 {
       color: $primary;
       text-align: center;
-      margin-bottom:25px;
-      @media (min-width:992px){
+      margin-bottom: 25px;
+      @media (min-width: 992px) {
         margin-bottom: 50px;
       }
-    } 
-    .connectWrap{
+    }
+    .connectWrap {
       display: grid;
       grid-template-columns: repeat(1, 1fr);
       gap: 20px;
       justify-content: center;
-      @media (min-width:768px){
-        grid-template-columns:repeat(2, 1fr);
+      @media (min-width: 768px) {
+        grid-template-columns: repeat(2, 1fr);
       }
-      .office{
+      .office {
         max-width: 436px;
         width: 100%;
         text-align: center;
         margin: 0 auto 20px;
-        ul{
-          li{
+        ul {
+          li {
             margin-bottom: 10px;
             font-size: 16px;
             line-height: 20px;
@@ -911,15 +911,65 @@
         }
       }
     }
-    .formWrap{
+    .formWrap {
       display: flex;
       gap: 20px;
       justify-content: center;
-      align-items: start;
-      .form{
-        h2{
+      align-items:center;
+      flex-direction: column;
+      @media (min-width:992px){
+        flex-direction: row;
+      }
+      .form {
+        .h2 {
           color: $primary;
           font-weight: 500;
+          margin-bottom: 20px;
+        }
+        .formHolder {
+          .field {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 10px;
+            @media (min-width:992px){
+              margin-bottom: 20px;
+            }
+            .error-border {
+              border-color: red;
+            }
+            .error {
+              color: red;
+              font-size: 12px;
+            }
+            label{
+              margin-bottom: 10px;
+              font-size: 15px;
+              line-height: 19px;
+            }
+            input, textarea{
+              padding:10px 20px;
+              width: 100%;
+              border: 1px solid $border;
+              outline: none;
+            }
+            textarea{
+              resize: none;
+              height: 100px;
+            }
+          }
+          .flex{
+            @media (min-width:768px){
+              display: flex;
+            gap: 10px;
+            }
+          }
+        }
+      }
+      .map {
+        img {
+          width: 400px;
+          height: 400px;
         }
       }
     }
