--- a/css/styles.css
+++ b/css/styles.css
@@ -233,7 +233,7 @@ footer .terms {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.4);
 }
 .home .hero .container {
   position: relative;
@@ -1004,6 +1004,104 @@ footer .terms {
   transform: rotate(180deg);
 }
 
+#gallery .hero {
+  position: relative;
+  overflow: hidden;
+  background-image: url("/images/gallery/hero.jpg");
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  color: white;
+  margin-bottom: 30px;
+}
+@media (min-width: 992px) {
+  #gallery .hero {
+    margin-bottom: 50px;
+  }
+}
+#gallery .hero::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+#gallery .hero .container {
+  position: relative;
+}
+@media (min-width: 768px) {
+  #gallery .hero .container {
+    margin: 0;
+    padding: 0 30px;
+  }
+}
+#gallery .hero .container .heading {
+  width: 100%;
+  max-width: 500px;
+  margin-top: 70px;
+}
+#gallery .cardImgs {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+  margin-bottom: 30px;
+}
+@media (min-width: 992px) {
+  #gallery .cardImgs {
+    margin-bottom: 50px;
+  }
+}
+#gallery .cardImgs img {
+  max-width: 300px;
+  height: 300px;
+  width: 100%;
+  margin: 0 auto;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+#gallery .cardImgs img:hover {
+  transform: scale(1.05);
+}
+#gallery .modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+#gallery .modal .modal-content {
+  max-width: 90%;
+  max-height: 90%;
+  margin: auto;
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 10px;
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5);
+}
+#gallery .modal .close {
+  position: absolute;
+  top: 10px;
+  right: 25px;
+  color: #fff;
+  font-size: 35px;
+  font-weight: bold;
+  cursor: pointer;
+}
+#gallery .modal .close:hover {
+  color: #f00;
+}
+
 #instructor .hero {
   position: relative;
   overflow: hidden;
@@ -1135,8 +1233,12 @@ footer .terms {
   margin: 0 auto;
   text-align: center;
   cursor: pointer;
+  transition: all 0.3s ease;
+  box-shadow: 0px 0px 30px 0px rgba(32, 32, 32, 0.15);
 }
 #instructor .instructorDetails .container .card:hover {
+  background: #274488;
+  color: white;
   box-shadow: 0px 0px 30px 0px rgba(32, 32, 32, 0.15);
 }
 #instructor .instructorDetails .container .card img {
