--- a/layouts/_common.scss
+++ b/layouts/_common.scss
@@ -30,7 +30,7 @@
       left: 0;
       right: 0;
       bottom: 0;
-      background-color: rgba(0, 0, 0, 0.5);
+      background-color: rgba(0, 0, 0, 0.4);
       // z-index: 0;
     }
 
@@ -760,6 +760,108 @@
   }
 }
 // Admission End
+//Gallery start
+#gallery{
+  .hero {
+    position: relative;
+    overflow: hidden;
+    background-image: url("/images/gallery/hero.jpg");
+    background-position: center;
+    background-size: cover;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    color: $white;
+    margin-bottom: 30px;
+    @media (min-width: 992px) {
+      margin-bottom: 50px;
+    }
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: rgba(0, 0, 0, 0.3);
+      // z-index: 0;
+    }
+
+    .container {
+      position: relative;
+      // z-index: 1;
+
+      @media (min-width: 768px) {
+        margin: 0;
+        padding: 0 30px;
+      }
+      .heading {
+        width: 100%;
+        max-width: 500px;
+        margin-top: 70px;
+      }
+    }
+  }
+  .cardImgs{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
+    margin-bottom: 30px;
+    @media (min-width: 992px) {
+      margin-bottom: 50px;
+    }
+    img{
+      max-width: 300px;
+      height: 300px;
+      width: 100%;
+      margin: 0 auto;
+      cursor: pointer;
+    transition: transform 0.3s ease;
+
+    &:hover {
+      transform: scale(1.05);
+    }
+    }
+  }
+  .modal {
+    display: none; // Hidden by default
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+  
+    .modal-content {
+      max-width: 90%;
+      max-height: 90%;
+      margin: auto;
+      display: block;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      border-radius: 10px;
+      box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5);
+    }
+  
+    .close {
+      position: absolute;
+      top: 10px;
+      right: 25px;
+      color: #fff;
+      font-size: 35px;
+      font-weight: bold;
+      cursor: pointer;
+  
+      &:hover {
+        color: #f00;
+      }
+    }
+  }
+}
 // Instructor Start
 #instructor {
   .hero {
@@ -877,7 +979,11 @@
         margin: 0 auto;
         text-align: center;
         cursor: pointer;
+        transition: all .3s ease;
+        box-shadow: 0px 0px 30px 0px rgba(32, 32,32, 0.15);
         &:hover{
+          background: $primary;
+          color: $white;
           box-shadow: 0px 0px 30px 0px rgba(32, 32,32, 0.15);
         }
         img{
@@ -904,6 +1010,7 @@
     }
   }
 }
+//Instructor End
 // Instructor End
 //Career Start
 .career {
