--- a/css/styles.css
+++ b/css/styles.css
@@ -1261,6 +1261,61 @@ footer .terms {
   line-height: 19px;
 }
 
+.announcements .hero {
+  background-color: #274488;
+  height: 100vh;
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@media (min-width: 992px) {
+  .announcements .hero {
+    margin-bottom: 50px;
+  }
+}
+.announcements .hero .container {
+  margin-top: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+  color: white;
+  flex-direction: column;
+}
+@media (min-width: 768px) {
+  .announcements .hero .container {
+    flex-direction: row;
+    gap: 50px;
+  }
+}
+.announcements .hero .container img {
+  border-radius: 50%;
+  height: 250px;
+  max-width: 250px;
+  width: 100%;
+  border: 4px solid white;
+}
+.announcements .announcementWrap {
+  text-align: center;
+  margin-bottom: 30px;
+}
+@media (min-width: 992px) {
+  .announcements .announcementWrap {
+    margin-bottom: 50px;
+  }
+}
+.announcements .announcementWrap .text {
+  background-color: #DCE1EC;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: start;
+  margin-bottom: 15px;
+}
+.announcements .announcementWrap .announcementTitle {
+  color: red;
+}
+
 .career .hero {
   position: relative;
   overflow: hidden;
@@ -1473,7 +1528,7 @@ footer .terms {
     gap: 10px;
   }
 }
-.contact .connect .formWrap .map img {
+.contact .connect .formWrap .map iframe {
   width: 400px;
   height: 400px;
 }
