--- a/layouts/_common.scss
+++ b/layouts/_common.scss
@@ -1011,7 +1011,58 @@
   }
 }
 //Instructor End
-// Instructor End
+// Announcemnt start
+.announcements{
+  .hero{
+    background-color: $primary;
+    height:100vh;
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    @media (min-width: 992px) {
+      margin-bottom: 50px;
+    }
+    .container{
+      margin-top: 100px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 10px;
+      color: $white;
+      flex-direction: column;
+      @media (min-width:768px){
+        flex-direction: row;
+        gap: 50px;
+      }
+      img{
+        border-radius: 50%;
+        height: 250px;
+        max-width: 250px;
+        width: 100%;
+        border: 4px solid $white;
+      }
+    }
+  }
+  .announcementWrap{
+    text-align: center;
+    margin-bottom: 30px;
+ @media (min-width:992px){
+  margin-bottom: 50px;
+ }
+ .text{
+  background-color: $border;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: start;
+  margin-bottom: 15px;
+ }
+ .announcementTitle{
+  color: red;
+ }
+  }
+}
+// Announcemnt end
 //Career Start
 .career {
   .hero {
@@ -1220,10 +1271,14 @@
         }
       }
       .map {
-        img {
+        iframe {
           width: 400px;
           height: 400px;
         }
+        // img {
+        //   width: 400px;
+        //   height: 400px;
+        // }
       }
     }
   }
