--- a/layouts/_header.scss
+++ b/layouts/_header.scss
@@ -30,15 +30,14 @@ header {
         background-color: white;
         margin: 5px 0;
         transition: 0.4s ease;
-        &:nth-child(3){
-            width: 13px;
+        &:nth-child(3) {
+          width: 13px;
         }
       }
 
       // When active, turn hamburger into a cross
       &.active span:nth-child(1) {
         transform: rotate(45deg) translate(5px, 5px); // Top bar to cross
-        
       }
       &.active span:nth-child(3) {
         width: 25px;
@@ -53,9 +52,9 @@ header {
     }
 
     // Navigation menu
-    nav {  width: 82%;
+    nav {
+      width: 82%;
       .nav-links {
-      
         display: flex;
         justify-content: space-between;
         list-style: none;
@@ -77,9 +76,9 @@ header {
             text-transform: uppercase;
             padding: 5px 10px;
             border-bottom: 2px solid transparent;
-transition: all .3s ease;
+            transition: all 0.3s ease;
             &:hover {
-             color: blue;
+              color: blue;
             }
           }
         }
